--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Document</title>
 		</head>
 		<body>
-			<h1>hi VS Code</h1>
+			<div>
+				<section></section>
+			</div>
 		</body>
 </html>
